# quran-neural-chunker

./: .gitignore  README.md  pyproject.toml
data/: quranic-treebank-0.4-chunks.tsv
src/: chunks.py  data.py  embeddings.py
src/chunks/: chunk.py  chunks.py  location.py  preprocessor.py
src/models/: bilstm_chunker.py  cart_chunker.py  evaluator.py  lstm_chunker.py  simple_chunker.py  xgboost_chunker.py
tests/: chunker_test.py  data_test.py  dataset_splitter.py  evaluate.py  evaluator.py  lstm_test.py  model_test.py
