[tool.poetry]
name = "quran-verse-chunker"
version = "0.1.0"
description = ""
authors = ["Kais Dukes"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
