[tool.poetry]
name = "quran-neural-chunker"
version = "0.1.0"
description = ""
authors = ["Kais Dukes"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
torch = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"